[finish #83009988] prevent too wide cases table

--- a/app/assets/stylesheets/cases.css.scss
+++ b/app/assets/stylesheets/cases.css.scss
@@ -91,3 +91,9 @@ hr.invis {
  vertical-align: top;
 }
 
+.case-description {
+  max-width: 150px;
+  overflow: hidden; /* this is what fixes the expansion */
+  text-overflow: ellipsis; /* not supported in all browsers, but I accepted the tradeoff */
+  white-space: nowrap;
+}
